[package]
name = "hot-reload"
description = "start toml hot-reloading poc"
version = "0.1.0"
edition = "2021"
authors = ["Jun Kurihara"]
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# launch options
clap = { version = "4.3.8", default-features = false, features = [
  "std",
  "cargo",
  "wrap_help",
] }

# async/await
tokio = { version = "1.28.2", features = [
  "net",
  "rt-multi-thread",
  "parking_lot",
  "time",
  "sync",
  "macros",
] }

# error
anyhow = "1.0.71"

# config toml
toml = { version = "0.7.5", default-features = false, features = ["parse"] }
serde = { version = "1.0.164", default-features = false, features = ["derive"] }

# logging
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
async-trait = "0.1.68"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5.0"
