[package]
name = "hot_reload"
description = "Trait and service definition of periodic hot reloader and notifier for config-file, KVS, etc."
version = "0.1.7"
edition = "2021"
repository = "https://github.com/junkurihara/rust-hot-reloader"
authors = ["Jun Kurihara"]
license = "MIT"
readme = "../README.md"
categories = ["filesystem", "rust-patterns"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.41.0", default-features = false, features = [
  "time",
  "sync",
] }
async-trait = "0.1.83"
tracing = "0.1.40"
thiserror = "1.0.68"
anyhow = "1.0.92"
