[package]
name = "hot_reload"
description = "Trait and service definition of periodic hot reloader and notifier for config-file, KVS, etc."
version = "0.3.0"
edition = "2024"
repository = "https://github.com/junkurihara/rust-hot-reloader"
authors = ["Jun Kurihara"]
license = "MIT"
readme = "../README.md"
categories = ["filesystem", "rust-patterns"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.47.1", default-features = false, features = [
  "time",
  "sync",
] }
async-trait = "0.1.89"
tracing = "0.1.41"
thiserror = "2.0.17"
anyhow = "1.0.100"
