[package]
name = "server-bin"
description = "start toml hot-reloading poc through detection of file changes"
version = "0.1.0"
edition = "2024"
authors = ["Jun Kurihara"]
license = "MIT"
readme = "README.md"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hot_reload = { path = "../reloader/" }
server-lib = { path = "../server-lib/" }

# launch options
clap = { version = "4.5.34", default-features = false, features = [
  "std",
  "cargo",
  "wrap_help",
] }

# async/await
tokio = { version = "1.44.1", default-features = false, features = [
  "rt-multi-thread",
] }

# error
anyhow = "1.0.97"

# config toml
toml = { version = "0.8.20", default-features = false, features = ["parse"] }
serde = { version = "1.0.219", default-features = false, features = ["derive"] }

# logging
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
async-trait = "0.1.88"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6.0"
