[package]
name = "server-bin"
description = "start toml hot-reloading poc through detection of file changes"
version = "0.1.0"
edition = "2024"
authors = ["Jun Kurihara"]
license = "MIT"
readme = "README.md"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hot_reload = { path = "../reloader/" }
server-lib = { path = "../server-lib/" }

# launch options
clap = { version = "4.5.49", default-features = false, features = [
  "std",
  "cargo",
  "wrap_help",
] }

# async/await
tokio = { version = "1.47.1", default-features = false, features = [
  "rt-multi-thread",
  "fs",
] }

# error
anyhow = "1.0.100"

# config toml
toml = { version = "0.9.8", default-features = false, features = [
  "parse",
  "serde",
] }
serde = { version = "1.0.228", default-features = false, features = ["derive"] }

# logging
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
async-trait = "0.1.89"

# file system watching
notify = "8.2.0"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6.0"
