[package]
name = "server-lib"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hot_reload = { path = "../reloader/" }
derive_builder = "0.20.0"
anyhow = "1.0.79"
thiserror = "1.0.56"
tokio = { version = "1.35.1", default-features = false, features = [
  "rt-multi-thread",
  "macros",
] }
tracing = "0.1.40"
