[package]
name = "server-lib"
version = "0.1.0"
edition = "2024"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hot_reload = { path = "../reloader/" }
derive_builder = "0.20.2"
anyhow = "1.0.100"
thiserror = "2.0.17"
tokio = { version = "1.47.1", default-features = false, features = [
  "rt-multi-thread",
  "macros",
] }
tracing = "0.1.41"
